# pret_a_depenser

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py  schemas.py
app/model/: loader.py  predict.py
app/utils/: errors.py  io.py  prod_logging.py  prod_logging_db.py  validation.py
core/: config.py
core/db/: conn.py  repo_features_store.py  repo_prod_requests.py  repo_ref_dist.py
examples/: input_example.json
monitoring/: README.md  requirements.txt  streamlit_app.py
monitoring/lib/: charts.py  constants.py  data.py  drift.py  filters.py  ops.py  security.py  timings.py
notebooks/01_data_preparation/: 01_analyse_exploratoire.ipynb  02_train_test_clean.ipynb  (+8 more)
pret_a_depenser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: 01_load_features_store.py  02_build_reference_dist.py  03_simulate_requests.py  04_analyze_prod_logs.py  analyze_prod_logs.py  build_reference_dist.py  load_features_store.py  simulate_requests.py
tests/: conftest.py  test_api.py  test_core_config.py  test_coverage_boost.py  test_db_conn.py  test_errors.py  test_health_endpoint.py  test_integration.py  test_io.py  test_lifespan.py  test_loader.py  test_logging.py  test_main.py  test_monitoring_charts.py  test_monitoring_data.py  test_monitoring_lib.py  test_predict.py  test_predict_endpoint.py  test_repo_features_store.py  test_repo_prod_requests.py  test_repo_rest_dist.py  test_repos_unit.py  test_validation.py  tests_health.py  tests_schemas.py
(+37 files in other folders)
